--- a/.templates/layout.html
+++ b/.templates/layout.html
@@ -24,7 +24,7 @@
 	  <meta name="DC.Language"	content="fr"></meta>
 	  <meta name="DC.Creator"	content="Lilian Besson"></meta>
 	  <meta name="DC.Subject"	content="Computer Science; Maths; OCaml; Python; Cr@ns; ENS de Cachan"></meta>
-	  <meta name="DC.Date"		content="2013-03-10"></meta>
+	  <meta name="DC.Date"		content="2013-03-24"></meta>
   <!-- End of Dublin Core Metadata -->
 
 <script type="text/javascript" src='_static/shortcuts.js'></script>
@@ -34,8 +34,8 @@
                     window.confirm("The following shortcut are enabled : \n\
  - h : display this help message, \n\
  - i : go back to the index, \n\
- - Left : previous page, \n\
- - Right : next page. \n\
+ - Left : previous page (still in construction), \n\
+ - Right : next page (still in construction). \n\
  (c) Lilian Besson.")
             },{
 	'type':'keydown'
@@ -99,6 +99,9 @@
         break;
     case 'pythonhosted.org':
         my_id = 'UA-38514290-8';
+        break;
+    case 'naereen-corp.crans.org':
+        my_id = 'ZOZO';
         break;
     default:
         break;
