--- a/gnuplot.html
+++ b/gnuplot.html
@@ -3,7 +3,6 @@
 <meta charset="utf-8">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>Gnuplot compiled by Emscripten</title>
-
 <style>
 .emscripten { padding-right: 0; margin-left: auto; font-size: 10px; margin-right: auto; display: block; }
 canvas.emscripten { border: 1px solid black; }
@@ -11,41 +10,40 @@ textarea.emscripten { font-family: monospace; width: 80%; }
 div.emscripten { text-align: center; }
 table.noborder { border: 0; vertical-align: text-top; }
 </style>
-
 </head>
 
 <body>
-Optional: Grant the program read-access to a specific file on your 
-local computer. This file is _not_ uploaded anywhere. Use it for data 
+<h1><a href="http://gnuplot.sourceforge.net/">Gnuplot</a> 4.6.1 compiled to JS with <a href="https://github.com/kripken/emscripten">Emscripten</a></h1>
+
+<hr>
+
+Optional: Grant the program read-access to a specific file on your
+local computer. This file is not uploaded anywhere. Use it for data
 files that you want to use in your script.<br>
 <input id="files" name="files[]" multiple="" type="file">
 <output id="list"></output>
 
 <hr>
 
-<table class="noborder"><tbody><tr>
-<td>
-</td>
-<td style="width:90%;" valign="top">
-<textarea class="emscripten" id="gnuplot" rows="35" onkeyup="scriptChange()">set terminal svg enhanced size 700,500 fname 'calibri' fsize 10 mouse jsdir "http://perso.crans.org/besson/gnuplot/"
+<table class="noborder"><tbody><tr><td>
+<img src="blob:7716fba5-e3f5-4826-b26f-45f3c2f2758a" frameborder="0" id="gnuimg" type="image/svg+xml" class="float-right" height="500" width="600">
+</td><td style="width:100%;" valign="top">
+<textarea class="emscripten" id="gnuplot" rows="35" onkeyup="scriptChange()">set terminal svg enhanced size 700,500 fname 'calibri' fsize 10 mouse jsdir "http://perso.crans.org/besson/_static/"
 set output 'out.svg'
-# set terminal svg size 600,400 dynamic enhanced fname 'arial'  fsize 10 mousing name "heatmaps_3" butt solid 
+# set terminal svg size 600,400 dynamic enhanced fname 'arial'  fsize 10 mousing name "heatmaps_3" butt solid
 # set output 'heatmaps.3.svg'
-plot cos(x**2)
+plot cos(x**2),sin(x**2)
 </textarea>
 </td></tr></tbody></table>
 <br clear="all">
 <hr>
 <h2 style="float: left;">Output:</h2>
-
 <textarea class="emscripten" id="output" rows="8">
 </textarea>
-
-<script src="gnuplot_api.js"></script>
-
+<script src="_static/gnuplot_api.js"></script>
 <script type="text/javascript">
 
-gnuplot.init('gnuplot.js');
+gnuplot.init('_static/gnuplot.js');
 gnuplot.onOutput = function(text) {
 document.getElementById('output').value += text + '\n';
 document.getElementById('output').scrollTop = 99999;
@@ -60,20 +58,19 @@ var val = document.getElementById("gnuplot").value;
 if (lastTAContent == val) return;
 localStorage["gnuplot.script"] = val;
 if (gnuplot.isRunning) {
-setTimeout(scriptChange, 1000);   
+setTimeout(scriptChange, 1000);
 } else {
 lastTAContent = val;
-runScript();        
+runScript();
 }
 };
-
 var runScript = function() {
 var element = document.getElementById('gnuplot');
 var start = Date.now();
 gnuplot.run(element.value, function(e) {
 gnuplot.onOutput('Execution took ' + (Date.now() - start) / 1000 + 's.');
 gnuplot.getFile('out.svg', function(e){
-if (!e.content) 
+if (!e.content)
 return;
 var img = document.getElementById('gnuimg');
 try {
@@ -83,7 +80,7 @@ window.URL = window.URL || window.webkitURL;
 img.src = window.URL.createObjectURL(blob);
 } catch(err) { // in case blob / URL missing, fallback to data-uri
 if (!window.blobalert) {
-alert('Warning - your browser does not support Blob-URLs, using data-uri with a lot more memory and time required. :('); 
+alert('Warning - your browser does not support Blob-URLs, using data-uri with a lot more memory and time required. :(');
 window.blobalert = true;
 }
 var rstr = '';
@@ -99,7 +96,6 @@ document.getElementById('gnuplot').value = localStorage["gnuplot.script"];
 scriptChange();
 function handleFileSelect(evt) {
 var files = evt.target.files; // FileList object
-
 // files is a FileList of File objects. List some properties.
 var output = [];
 for (var i = 0, f; f = files[i]; i++) {
@@ -108,7 +104,7 @@ f.size, ' bytes, last modified: ',
 f.lastModifiedDate ? f.lastModifiedDate.toLocaleDateString() : 'n/a',
 '</li>');
 var reader = new FileReader();
-fname = f.name;     // dirty :( 
+fname = f.name;     // dirty :(
 reader.onloadend = function(e) {
 gnuplot.onOutput(fname + ": Read success");
 if (e.target.result)
@@ -120,6 +116,4 @@ document.getElementById('list').innerHTML = '<ul>' + output.join('') + '</ul>';
 }
 document.getElementById('files').addEventListener('change', handleFileSelect, false);
 </script>
-
-</body>
-</html>
+</body></html>
