ca suffit, ca marche c'est bon je passe au toplevel python maitenant

--- a/gnuplot.html
+++ b/gnuplot.html
@@ -32,6 +32,7 @@ files that you want to use in your script.<br>
 set output 'out.svg'
 # set terminal svg size 600,400 dynamic enhanced fname 'arial'  fsize 10 mousing name "heatmaps_3" butt solid
 # set output 'heatmaps.3.svg'
+# Allez y, essayer d'entrer votre propre graphe ici à la place !
 plot cos(x**2),sin(x**2)
 </textarea>
 </td></tr></tbody></table>
