plus de détails

--- a/.templates/layout.html
+++ b/.templates/layout.html
@@ -30,9 +30,9 @@
 <script type="text/javascript" src='_static/shortcuts.js'></script>
 <!-- Thanks to http://www.openjs.com/scripts/events/keyboard_shortcuts/ -->
 <script type="text/javascript">
-shortcut.add("?",function() {
+shortcut.add("h",function() {
 window.confirm("The following shortcuts are enabled : \n\
- - ? : display this help message, \n\
+ - h : display this help message, \n\
  - Left : previous page (still in construction), \n\
  - Right : next page (still in construction). \n\
   Lilian Besson (c) 2013.")
