--- a/.templates/layout.html
+++ b/.templates/layout.html
@@ -10,6 +10,7 @@
 	  <meta name="DC.Subject"	content="Computer Science; Maths; OCaml; Python; Cr@ns; ENS de Cachan; GNU Nano; Ubuntu; gedit; GNUPlot; GraphViz; GPG; LaTeX; rST; Octave"></meta>
 	  <meta name="DC.Date"		content="2013-03-26"></meta>
   <!-- End of Dublin Core Metadata -->
+<link rel="alternate" type="application/rss+xml" title="Suivre l'évolution de mon site" href="https://bitbucket.org/lbesson/web-sphinx/rss"/>
 <script type="text/javascript">
 /*****************************************************************************
  * This file is (c) Lilian Besson, 2011-2013.
