--- a/.templates/layout.html
+++ b/.templates/layout.html
@@ -11,6 +11,45 @@
 	  <meta name="DC.Date"		content="2013-03-26"></meta>
   <!-- End of Dublin Core Metadata -->
 <link rel="alternate" type="application/rss+xml" title="Suivre l'évolution de mon site" href="https://bitbucket.org/lbesson/web-sphinx/rss"/>
+  <!-- Colors -->
+.black {color:black}
+.gray {color:gray}
+.silver {color:silver}
+.white {color:white}
+.maroon {color:maroon} </style>
+     <style type="text/css"> 
+.red {color:red} </style>
+     <style type="text/css"> 
+.magenta {color:magenta} </style>
+     <style type="text/css"> 
+.fuchsia {color:fuchsia} </style>
+     <style type="text/css"> 
+.pink {color:pink} </style>
+     <style type="text/css"> 
+.orange {color:orange} </style>
+     <style type="text/css"> 
+.yellow {color:yellow} </style>
+     <style type="text/css"> 
+.lime {color:lime} </style>
+     <style type="text/css"> 
+.green {color:green} </style>
+     <style type="text/css"> 
+.olive {color:olive} </style>
+     <style type="text/css"> 
+.teal {color:teal} </style>
+     <style type="text/css"> 
+.cyan {color:cyan} </style>
+     <style type="text/css"> 
+.aqua {color:aqua} </style>
+     <style type="text/css"> 
+.blue {color:blue} </style>
+     <style type="text/css"> 
+.navy {color:navy} </style>
+     <style type="text/css"> 
+.purple {color:purple} </style>
+     <style type="text/css"> 
+.u {text-decoration: underline} 
+</style>
 <script type="text/javascript">
 /*****************************************************************************
  * This file is (c) Lilian Besson, 2011-2013.
