--- a/.templates/layout.html
+++ b/.templates/layout.html
@@ -38,7 +38,7 @@
     .u {text-decoration: underline} 
     .o {text-decoration: overline} 
     .blink {text-decoration: blink} 
-    .line-through {text-decoration: line-through} 
+    .line {text-decoration: line-through} 
 </style>
 <script type="text/javascript">
 /*****************************************************************************
