--- a/.templates/layout.html
+++ b/.templates/layout.html
@@ -38,7 +38,14 @@
     .u {text-decoration: underline} 
     .o {text-decoration: overline} 
     .blink {text-decoration: blink} 
-    .line {text-decoration: line-through} 
+    .line {text-decoration: line-through}
+
+    .it {font-style: italic}
+    .ob {font-style: oblique}
+
+    .center {text-align: center}
+    .left {text-align: left}
+    .right {text-align: right}
 </style>
 <script type="text/javascript">
 /*****************************************************************************
