--- a/.templates/layout.html
+++ b/.templates/layout.html
@@ -13,7 +13,7 @@
   <!-- RSS workflow (from bitbucket.org) -->
     <link rel="alternate" type="application/rss+xml" title="Suivre l'évolution de mon site" href="https://bitbucket.org/lbesson/web-sphinx/rss"/>
   <!-- Colors -->
-  <style type="text/rss">
+  <style type="text/css">
     .black {color:black}
     .gray {color:gray}
     .silver {color:silver}
