--- a/.templates/layout.html
+++ b/.templates/layout.html
@@ -4,7 +4,8 @@
    <li><img src="{{ pathto('_static/.besson.png', 1) }}" alt=""
     style="height:32px; widht:32px; vertical-align: middle; margin-top: -1px"/></li>
    <li><a href="{{ pathto('index') }}">{{ shorttitle }}</a>{{ reldelim1 }}</li>
-   <li>{{ title }} (v{{ version}} {{ release }})</li>
+   <li><a href="#">{{ title }}</a></li>
+   <li>(v{{ version|e }} {{ release|e }} - Dernière modification {{ last_updated|e }})</li>
 {% endblock %}
 
 {% block extrahead %}
