--- a/.templates/layout.html
+++ b/.templates/layout.html
@@ -5,7 +5,7 @@
     style="height:32px; widht:32px; vertical-align: middle; margin-top: -1px"/></li>
    <li><a href="{{ pathto('index') }}">{{ shorttitle }}</a>{{ reldelim1 }}</li>
    <li><a href="#">{{ title }}</a></li>
-   <li>(v{{ version|e }} {{ release|e }} - Dernière modification {{ last_updated|e }})</li>
+<!--   <li>(v{{ version|e }} {{ release|e }} - Dernière modification {{ last_updated|e }})</li> -->
 {% endblock %}
 
 {% block extrahead %}
