ok pdf download.

--- a/.templates/sourcepdf.html
+++ b/.templates/sourcepdf.html
@@ -1,5 +1,4 @@
-{% extends "!sourcelink.html" %}
-<h3>{{ _('Cette page dans en .txt et en .pdf') }}</h3>
+<h3>{{ _('Cette page en .txt et en .pdf') }}</h3>
 <ul class="this-page-menu">
   <li><a href="{{ pathto('pdf/' + sourcename + '.pdf', true)|e }}"
          rel="nofollow">Voir la version PDF</a></li>
