--- a/.templates/sourcepdf.html
+++ b/.templates/sourcepdf.html
@@ -1,7 +1,9 @@
 <h3>{{ _('Cette page en .txt et en .pdf') }}</h3>
+{%- if show_source and has_source and sourcename %}
 <ul class="this-page-menu">
   <li><a href="{{ pathto('pdf/' + sourcename + '.pdf', true)|e }}"
          rel="nofollow">Voir la version PDF</a></li>
   <li><a href="{{ pathto('_sources/' + sourcename, true)|e }}"
          rel="nofollow">Voir le fichier source</a></li>
 </ul>
+{%- endif %}
