--- a/.templates/download.html
+++ b/.templates/download.html
@@ -7,7 +7,7 @@
 {% if last_updated %}<p><b>Dernière modification le : {{ last_updated }}.</b></p>{% endif %}
 
 <p>Ces pages web sont générées avec <strong>Sphinx</strong>.
-Et lors de leurs générations, un de mes scripts produit aussi une version PDF de chaque page.</p>
+Et lors de leurs générations, un de mes scripts produit aussi une version PDF de certaines pages.</p>
 
 <p>Le dossier <a href="pdf/">pdf/</a> est là pour vous permettre de télécharger
 les fichiers PDF ainsi produits.</p>
