--- a/.templates/layout.html
+++ b/.templates/layout.html
@@ -2,7 +2,7 @@
 
 {% block rootrellink %}
  <li><img src="{{ pathto('_static/.besson.png', 1) }}" alt=""
-  style="height:32px; widht:32px; vertical-align: middle; margin-top: -1px"/></li>
+  style="height:32px; width:32px; vertical-align: middle; margin-top: -1px"/></li>
 <!-- <li><a href="#">{{ title }}</a>{{ reldelim1 }}</li> -->
  <li><a href="{{ pathto('index') }}">{{ shorttitle }}</a>{{ reldelim1 }}</li>
 <!--   <li>(v{{ version|e }} {{ release|e }} - Dernière modification {{ last_updated|e }})</li> -->
