ok templates done

--- a/.templates/sourcepdf.html
+++ b/.templates/sourcepdf.html
@@ -5,5 +5,7 @@
          rel="nofollow">Voir la version PDF</a></li>
   <li><a href="{{ pathto('_sources/' + sourcename, true)|e }}"
          rel="nofollow">Voir le fichier source</a></li>
+  <br>
+  <li><a href"download.html" rel="nofollow">Page de téléchargement</a></li>
 </ul>
 {%- endif %}
