--- a/.templates/sourcepdfcv.html
+++ b/.templates/sourcepdfcv.html
@@ -1,22 +1,21 @@
 {%- if show_source and has_source and sourcename %}
-<h3>{{ _('Mon CV en français ou en anglais) }}</h3>
+<h3>{{ _('Mon CV en français ou en anglais') }}</h3>
 <ul class="this-page-menu">
   <li><a href="CV_Lilian_BESSON.fr.html"
-         rel="nofollow">Voir la version française, en *HTML*.</a></li>
+         rel="nofollow">Voir la version française, en *HTML*</a></li>
   <li><a href="CV_Lilian_BESSON.en.html"
-         rel="nofollow">Voir la version anglaise, en *HTML*.</a></li>
+         rel="nofollow">Voir la version anglaise, en *HTML*</a></li>
 </ul>
 
 <h3>{{ _('Mon CV en PDF') }}</h3>
 <ul class="this-page-menu">
   <li><a href="CV_Lilian_BESSON.pdf"
-         rel="nofollow">Voir la version PDF</a>, compilée depuis *LaTeX* par *pdflatex*.</li>
+         rel="nofollow">Voir la version PDF</a>, compilée depuis *LaTeX* par *pdflatex*</li>
   <li><a href="CV_Lilian_BESSON.html"
-         rel="nofollow">Voir la version HTML</a>, compilée depuis *LaTeX* par *HeVeA*.</li>
-
+         rel="nofollow">Voir la version HTML</a>, compilée depuis *LaTeX* par *pdf2html*</li>  <br>
   <li><a href="CV_Lilian_BESSON.fr.pdf"
-         rel="nofollow">Voir la version PDF</a>, compilée depuis *rST*, en français.</a></li>
+         rel="nofollow">Voir la version PDF</a>, compilée depuis *rST*, en français</a></li>
   <li><a href="CV_Lilian_BESSON.en.pdf"
-         rel="nofollow">Voir la version PDF</a>, compilée depuis *rST*, en anglais.</a></li>
+         rel="nofollow">Voir la version PDF</a>, compilée depuis *rST*, en anglais</a></li>
 </ul>
 {%- endif %}
