--- a/.templates/sourcepdf.html
+++ b/.templates/sourcepdf.html
@@ -6,6 +6,6 @@
   <li><a href="{{ pathto('_sources/' + sourcename, true)|e }}"
          rel="nofollow">Voir le fichier source</a></li>
   <br>
-  <li><a href"download.html" rel="nofollow">Page de téléchargement</a></li>
+  <li><a href="{{ pathto('download')|e }}" rel="nofollow">Page de téléchargement</a></li>
 </ul>
 {%- endif %}
