fixe layout.html

--- a/.templates/layout.html
+++ b/.templates/layout.html
@@ -157,7 +157,7 @@ location.href="{{ next.link|e }}";
 {{ super() }}
 <div class="footer">Toutes remarques, questions, ou notifications de bugs peuvent être posées via cette page
 <a href="https://bitbucket.org/lbesson/web-sphinx/issues">web-sphinx/issues</a>.
-Si ça concerne un des scripts présents sur mes pages, veuillez utiliser
+<br>Si ça concerne un des scripts présents sur mes pages, veuillez utiliser
 <a href="https://bitbucket.org/lbesson/web-sphinx-scripts/issues">web-sphinx-scripts/issues</a>.
 <br>Des précisions sur les droits de copies, de propriétés intellectuelles,
 sur les institutions et les marques citées sont disponibles
