essaie de fixer les erreurs signalées par validator.w3c.org

--- a/.templates/sourcepdf.html
+++ b/.templates/sourcepdf.html
@@ -5,7 +5,6 @@
          rel="nofollow">Voir la version PDF</a></li>
   <li><a href="{{ pathto('_sources/' + sourcename, true)|e }}"
          rel="nofollow">Voir le fichier source</a></li>
-  <br>
-  <li><a href="{{ pathto('download')|e }}" rel="nofollow">Page de téléchargement</a></li>
+  <li><br/><a href="{{ pathto('download')|e }}" rel="nofollow">Page de téléchargement</a></li>
 </ul>
 {%- endif %}
