--- a/.templates/sourcepdfcv.html
+++ b/.templates/sourcepdfcv.html
@@ -11,7 +11,7 @@
   <li><a href="CV_Lilian_BESSON.pdf"
          rel="nofollow">Voir la version PDF</a>, compilée depuis LaTeX par pdflatex</li>
   <li><a href="CV_Lilian_BESSON.html"
-         rel="nofollow">Voir la version HTML</a>, compilée depuis LaTeX par pdf2html</li>  <br>
+         rel="nofollow">Voir la version HTML</a>, compilée depuis LaTeX par pdf2html<br/></li>
   <li><a href="CV_Lilian_BESSON.fr.pdf"
          rel="nofollow">Voir la version PDF</a>, compilée depuis rST, en français</a></li>
   <li><a href="CV_Lilian_BESSON.en.pdf"
