clean web servers. Update make send: better now :). And add a gif Navi ... cf palaiszelda.com

--- a/.templates/layout.html
+++ b/.templates/layout.html
@@ -174,4 +174,5 @@ Google Analytics</a> pour collecter des statistiques, ce qui peut être
 désactivé en bloquant le JavaScript venant de www.google-analytics.com,
 ou via quelque chose comme <a href="http://www.ghostery.com">Ghostery</a>.
 </div>
+<script type="text/javascript" src="_static/simpleimagetrail.js"></script>
 {% endblock %}
