--- a/.templates/layout.html
+++ b/.templates/layout.html
@@ -39,8 +39,8 @@
     .navy {color:navy}
     .purple {color:purple}
 
-    .u {text-decoration: underline} 
-    .o {text-decoration: overline} 
+    .under {text-decoration: underline} 
+    .over {text-decoration: overline} 
     .blink {text-decoration: blink} 
     .line {text-decoration: line-through}
     .it {font-style: italic}
