--- a/.templates/layout.html
+++ b/.templates/layout.html
@@ -66,7 +66,7 @@
  * by hand all the produced HTML pages.
  * ( Google Analytics is a trademark of Google Inc.)
  *****************************************************************************/  
-  my_id = 'UA-38514290-1';
+  var my_id = 'UA-38514290-1';
   switch(window.location.host) {
     case 'perso.crans.org':
         my_id = 'UA-38514290-1';
