--- a/.templates/layout.html
+++ b/.templates/layout.html
@@ -5,6 +5,7 @@
  <li><a href="{{ pathto('index') }}">{{ shorttitle }}</a>{{ reldelim1 }}</li>
 {% endblock %}
 {% block extrahead %}
+  <meta name="author" content="Lilian Besson" />
   <!-- Dublin Core Metadata -->
   <link rel="schema.DC" href="http://purl.org/dc/elements/1.1/" />
     <meta name="DC.Title" content="Lilian Besson on the web" />
@@ -13,8 +14,10 @@
     <meta name="DC.Subject" content="Computer Science; Maths; OCaml; Python; Cr@ns; ENS de Cachan; GNU Nano; Ubuntu; gedit; GNUPlot; GraphViz; GPG; LaTeX; rST; Octave" />
     <meta name="DC.Date" content="2013-03-26" />
   <!-- End of Dublin Core Metadata -->
-  <!-- RSS workflow (from bitbucket.org) -->
-    <link rel="alternate" type="application/rss+xml" title="Suivre l'évolution de mon site" href="https://bitbucket.org/lbesson/web-sphinx/rss" />
+  <!-- RSS workflow (from bitbucket.org/lbesson) -->
+    <link rel="alternate" type="application/rss+xml" title="Suivre l'évolution de mon site (via bitbucket)" href="https://bitbucket.org/lbesson/web-sphinx/rss" />
+  <!-- RSS workflow (from perso.crans.org/besson) -->
+    <link rel="alternate" type="application/rss+xml" title="Suivre l'évolution de mon site" href="http://perso.crans.org/besson/rss.xml" />
     <link rel="shortcut icon" type="image/png" href="{{ pathto('_static/.besson.png', 1) }}" />
   <!-- Colors -->
   <style type="text/css">
