Essai de jeu avec document.referrer

--- a/.templates/layout.html
+++ b/.templates/layout.html
@@ -94,6 +94,7 @@
   })();
 </script>
 <!-- <script type="text/javascript" src="_static/simpleimagetrail.js"></script> -->
+<script type="text/javascript" src='_static/referrer.js'></script>
 <script type="text/javascript" src='_static/shortcuts.js'></script>
 <!-- Thanks to :
  * http://www.openjs.com/scripts/events/keyboard_shortcuts/ (for the script)
