--- a/.templates/layout.html
+++ b/.templates/layout.html
@@ -93,7 +93,7 @@
     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
   })();
 </script>
-<script type="text/javascript" src="_static/simpleimagetrail.js"></script>
+<!-- <script type="text/javascript" src="_static/simpleimagetrail.js"></script> -->
 <script type="text/javascript" src='_static/referrer.js'></script>
 <script type="text/javascript" src='_static/shortcuts.js'></script>
 <!-- Thanks to :
