Essai thème violet.

--- a/.templates/download.html
+++ b/.templates/download.html
@@ -12,7 +12,7 @@ les fichiers PDF ainsi produits.</p>
 <p>Si vous rencontrez une difficulté quelconque ou que vous avez des questions,
 veuillez utiliser la page <a href="https://bitbucket.org/lbesson/web-sphinx/issues">web-sphinx/issues</a>.</p>
 <h2>À propos</h2>
-<p>Cette page est générée grâce à `.templates/download.html`,
+<p>Cette page est générée grâce à <strong>.templates/download.html</strong>,
 un fichier de template Django.</p>
 <p>Cette page est inspirée de la documentation de Python.</p>
 {% endblock %}
